styling guide page nazava

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -93,7 +93,11 @@ body {
 	<script wicket:id="alexaCertifyScript">
 		[AlexaCertifyScript]
 	</script>
-
+	
+	 <script type="text/javascript">
+		    
+    </script>
+	
 	<wicket:container wicket:id="footer-container" />
 	
 </body>
