--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmo.html
@@ -26,6 +26,7 @@ body {
 /*       } */
 </style>
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
