styling navbar muve

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmodark.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmodark.html
@@ -42,7 +42,7 @@ body {
 <!-- 	<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png" /> -->
 </head>
 
-<body>
+<body class="body-offcanvas">
 	<div wicket:id="dev">[DebugBar]</div>
 		<header wicket:id="header"></header>
 		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
