styling tuneeca navbar

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -43,7 +43,7 @@ body {
 
 </head>
 
-<body>
+<body class="body-offcanvas">
 	<div wicket:id="dev" style="display: none;">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
@@ -144,84 +144,7 @@ Remarketing tags may not be associated with personally identifiable information 
 <!-- 	</noscript> -->
 
 
-<!-- slide menu -->
 
-<script id="jsbin-javascript">
-$(document).ready(function () {
-
-
-    //stick in the fixed 100% height behind the navbar but don't wrap it
-    $('#slide-nav.navbar .container').append($('<div id="navbar-height-col"></div>'));
-
-    // Enter your ids or classes
-    var toggler = '.navbar-toggle';
-    var pagewrapper = '.page-content';
-    var navigationwrapper = '.navbar-header';
-    var menuwidth = '100%'; // the menu inside the slide menu itself
-    var slidewidth = '270px';
-    var menuneg = '-100%';
-    var slideneg = '-45%';
-
-
-    $("#slide-nav").on("click", toggler, function (e) {
-
-        var selected = $(this).hasClass('slide-active');
-
-        $('#slidemenu').stop().animate({
-            left: selected ? menuneg : '0px'
-        });
-
-        $('#navbar-height-col').stop().animate({
-            left: selected ? slideneg : '0px'
-        });
-
-        $(pagewrapper).stop().animate({
-            left: selected ? '0px' : slidewidth
-        });
-
-        $(navigationwrapper).stop().animate({
-            left: selected ? '0px' : slidewidth
-        });
-
-
-        $(this).toggleClass('slide-active', !selected);
-        $('#slidemenu').toggleClass('slide-active');
-
-
-        $('.page-content, .navbar, body, .navbar-header').toggleClass('slide-active');
-
-
-    });
-
-
-    var selected = '#slidemenu, .page-content, body, .navbar, .navbar-header';
-
-
-    $(window).on("resize", function () {
-
-        if ($(window).width() > 767 && $('.navbar-toggle').is(':hidden')) {
-            $(selected).removeClass('slide-active');
-        }
-
-
-    });
-
-
-
-
-});
-</script>
-
-<script type="text/javascript">
-// $(window).scroll(function() {
-// 	if ($(this).scrollTop() > 0) {
-//         $('.navbar').addClass('fix');
-//     } else {
-//         $('.navbar').removeClass('fix');
-//     }
-// });
-
-</script>
 
 </body>
 </html>
