--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -47,11 +47,8 @@ body {
 	<div wicket:id="dev" style="display: none;">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
-	<div class="wrapp-navbar">
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-	</div>
+	<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
 	<div class="page-content">
-		<div id="">
 			<div class="container top-md-10">
 				<div class="row">
 					<div class="col-sm-3 col-md-3 sidebar-categories top-md-30" wicket:id="sidebarColumn">
@@ -82,7 +79,6 @@ body {
 					href="http://www.soluvas.com/">Soluvas</a> 2012
 				</small>
 			</footer>
-		</div>
 	</div>
 	<!--/.fluid-container-->
 
