--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmodark.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_flatmodark.html
@@ -27,6 +27,7 @@ body {
 </style>
 <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Khand' rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
