--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
@@ -5,8 +5,9 @@
 				Only custom terms (with namespace other than <tt>base</tt>) are editable.
 			</div>
 			<select wicket:id="ddcTermKind"></select>
-			<br/>
-			<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
+			<div style="margin-top: 10px;">
+				<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
+			</div>
 			<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
 				[table]
 			</table>
