styling secret light theme

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -58,6 +58,9 @@ body {
 		<div wicket:id="addedInfo"></div>
 	</div>
 	<div class="clearfix"></div>
+			<div wicket:id="afterHeader" class="afterHeader">
+				<!-- 		Carousel Images is loading.. -->
+			</div>
 	<div class="container">
 		<!-- 		    <ul class="breadcrumb"> -->
 		<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
@@ -70,10 +73,7 @@ body {
 			</div>
 			<!--/span-->
 
-			<div class="span9" wicket:id="contentColumn">
-				<div wicket:id="afterHeader" class="afterHeader">
-					<!-- 		Carousel Images is loading.. -->
-				</div>
+			<div wicket:id="contentColumn">
 				<div wicket:id="feedback" class="feedback"></div>
 				<wicket:child>
 					<ol class="featured-products">
