--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -28,6 +28,7 @@ body {
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Crete+Round"
 	rel="stylesheet" type="text/css"/>
+<link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
 <!-- <link wicket:id="soluvasCss" -->
