--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -106,16 +106,21 @@ body {
 // 		});
 	</script>
 	
-	<script type="text/javascript">
-		var __lc = {};
-		__lc.license = 2013831;
+<!-- 	<script type="text/javascript"> -->
+<!-- 		var __lc = {}; -->
+<!-- 		__lc.license = 2013831; -->
 		
-		(function() {
-			var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-			lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-		})();
-	</script>
+<!-- 		(function() { -->
+<!-- 			var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true; -->
+<!-- 			lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js'; -->
+<!-- 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s); -->
+<!-- 		})(); -->
+<!-- 	</script> -->
+
+<!-- Start of tuneeca Zendesk Widget script -->
+<script>/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","tuneeca.zendesk.com");
+/*]]>*/</script>
+<!-- End of tuneeca Zendesk Widget script -->
 	
 	<wicket:container wicket:id="footer-container" />
 
