--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
@@ -31,6 +31,7 @@ body {
 	rel="stylesheet" type="text/css"/>
 <link href="//fonts.googleapis.com/css?family=Oswald:300"
 	rel="stylesheet" type="text/css"/>
+	<link href='https://fonts.googleapis.com/css?family=Khand:400,500,600,700' rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
