--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2DetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2DetailPanel.html
@@ -22,7 +22,7 @@
 					<form class="form-horizontal" role="form" wicket:id="form" >
 						<div wicket:id="wmcLocales" class="wrapp-multilang" >
 							<div wicket:id="locales">
-								<a class="btn btn-default" wicket:id="btnLocale"><span wicket:id="lblLocale"></span></a>
+								<button class="btn btn-default" wicket:id="btnLocale"></button>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -46,6 +46,13 @@
 							<label class="col-lg-2 col-md-3 col-sm-3 control-label" wicket:for="desc">Description :</label>
                             <div class="col-lg-6 col-md-6 col-sm-9">
 								<textarea wicket:id="desc" class="form-control"></textarea>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group" wicket:id="wmcContent">
+							<label class="col-lg-2 col-md-3 col-sm-3 control-label" wicket:for="contentTxt">Content :</label>
+                            <div class="col-lg-6 col-md-6 col-sm-9">
+								<textarea wicket:id="contentTxt" class="form-control" rows="10"></textarea>
                             </div>
                         </div>			
                           					
