--- a/site/src/main/java/org/soluvas/web/site/widget/LinkPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/LinkPanel.html
@@ -1,3 +1,3 @@
 <wicket:panel>
-<a href="#" wicket:id="link"><span wicket:id="label">label</span></a> <i class="fa fa-lock" title="Read-only" wicket:id="lock"></i>
+<i wicket:id="icon"/> <a href="#" wicket:id="link"><span wicket:id="label">label</span></a> <i class="fa fa-lock" title="Read-only" wicket:id="lock"></i>
 </wicket:panel>
