--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
@@ -1,17 +1,22 @@
 <wicket:panel>
 	<form wicket:id="form">
-		<div class="panel-body">
-			<div class="alert alert-info">
-				Only custom terms (with namespace other than <tt>base</tt>) are editable.
+		<section class="panel">
+			<header class="panel-heading">
+       		<span>Term</span>
+			</header>
+			<div class="panel-body">
+				<div class="alert alert-info">
+					Only custom terms (with namespace other than <tt>base</tt>) are editable.
+				</div>
+				<select wicket:id="ddcTermKind"></select>
+				<div style="margin-top: 10px;">
+					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
+				</div>
+				<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
+					[table]
+				</table>
 			</div>
-			<select wicket:id="ddcTermKind"></select>
-			<div style="margin-top: 10px;">
-				<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
-			</div>
-			<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
-				[table]
-			</table>
-		</div>
+		</section>
 	</form>
 </wicket:panel>
 
