--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
@@ -6,11 +6,11 @@
 			</header>
 			<div class="panel-body">
 				<div class="alert alert-info">
-					Only custom terms (with namespace other than <tt>base</tt>) are editable.
+					Hanya koleksi kustom (awalan bukan base) yang dapat diubah.
 				</div>
 				<select wicket:id="ddcTermKind"></select>
 				<div style="margin-top: 10px;">
-					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
+					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Term</a>
 				</div>
 				<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
 					[table]
