--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2TablePanel.html
@@ -6,7 +6,7 @@
 			</header>
 			<div class="panel-body">
 				<div class="alert alert-info">
-					Hanya koleksi kustom (awalan bukan base) yang dapat diubah.
+					Hanya koleksi custom (awalan bukan base) yang dapat diubah.
 				</div>
 				<select wicket:id="ddcTermKind"></select>
 				<div style="margin-top: 10px;">
