--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -15,6 +15,7 @@
 <meta wicket:id="ogType" property="og:type" content="video.movie" />
 <meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
 <meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+<meta wicket:id="ogImageSecure" property="og:image:secure_url" content="https://ia.media-imdb.com/images/rock.jpg" />
 <meta wicket:id="ogDescription" property="og:description" content="The rock" />
 <link wicket:id="canonical" rel="canonical" href="http://www.example.com/product.php?item=swedish-fish"/>
 <wicket:container wicket:id="meta"></wicket:container>
