--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2DetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/Term2DetailPanel.html
@@ -82,7 +82,7 @@
 	                            <div class="col-lg-4 col-md-7 col-sm-9">
 									<button wicket:id="saveBtn" class="btn btn-primary"><i class="fa fa-check"></i> Simpan</button>
 									<button wicket:id="deleteBtn" class="btn btn-danger"><i class="fa fa-trash-o"></i> Hapus</button>
-									<a wicket:id="backLink" href="#" class="btn btn-warning"><i class="fa fa-chevron-circle-left"></i> Kembali ke Daftar</a>
+									<a wicket:id="backLink" href="#" class="btn btn-default"><i class="fa fa-chevron-circle-left"></i> Kembali ke Daftar</a>
 	                            </div>
 	                        </div>			
 						</div>
