--- a/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
@@ -7,7 +7,7 @@ ol.collection-column {
 </style>
 </wicket:head>
 <wicket:panel>
-<ol class="collection-column">
+<ol class="collection-column list-unstyled">
 	<li wicket:id="values"><wicket:container wicket:id="value">[value]</wicket:container></li>
 	<wicket:enclosure child="more">
 	<li class="more" style="list-style-type: none"><small class="text-muted"><strong wicket:id="more">25</strong> more</small></li>
