--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -130,13 +130,13 @@ body {
 	<!--------------------------------------------------
 Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
 --------------------------------------------------->
-<!--  <script type="text/javascript"> 
-// 		/* <![CDATA[ */
-// 		var google_conversion_id = 989738871;
-// 		var google_custom_params = window.google_tag_params;
-// 		var google_remarketing_only = true;
+<script type="text/javascript"> 
+// 		/* <![CDATA[ 
+ 		var google_conversion_id = 989738871;
+ 		var google_custom_params = window.google_tag_params;
+ 		var google_remarketing_only = true;
 // 		/* ]]> */
-	</script> -->
+	</script> 
 <!-- 	<script type="text/javascript" -->
 <!-- 		src="//www.googleadservices.com/pagead/conversion.js"> -->
 		
