--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
@@ -59,7 +59,8 @@ body {
 		<div class="container">
 			<div class="row">
 				<div class="content-wrapp">
-					<div wicket:id="contentColumn" class="content-column col-sm-12 col-md-12">
+<!-- 					<div wicket:id="contentColumn" class="content-column col-sm-12 col-md-12"> -->
+					<div wicket:id="contentColumn" class="content-column">
 						<div wicket:id="addedInfo"></div>
 						<div wicket:id="feedback" class="feedback"></div>
 						<wicket:child>
