--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BootstrapPagingNavigator.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/widget/BootstrapPagingNavigator.html
@@ -6,7 +6,7 @@
     <li wicket:id="prevItem"><a wicket:id="prev" class="prev" rel="prev">&lt;</a></li>
     <li wicket:id="navigation"><a wicket:id="pageLink">
         <wicket:fragment wicket:id="pageNumber">5</wicket:fragment>
-        <div wicket:id="pageNumber">5</div>
+<!--         <div wicket:id="pageNumber">5</div> -->
     </a></li>
     <li wicket:id="nextItem"><a wicket:id="next" class="next" rel="next">&gt;</a></li>
     <li wicket:id="lastItem"><a wicket:id="last" class="last">&gt;&gt;</a></li>
