--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -34,28 +34,29 @@
 		
 		
 		<div class="container">
-		<section id="home">
-			<div class="sidebar-categories" wicket:id="sidebarColumn">
-				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-			</div>
-			<!--/span-->
-
-			<div wicket:id="contentColumn" class="content-column">
-				<div wicket:id="afterHeader" class="afterHeader">
-					<!-- 		Carousel Images is loading.. -->
-				</div>
-				<div wicket:id="addedInfo"></div>
-				<div wicket:id="feedback" class="feedback"></div>
-				<wicket:child>
-					<ol class="featured-products">
-						<div id="featuredProducts">
-							<li><a href="#">Product name</a></li>
-						</div>
-					</ol>
-				</wicket:child>
-			</div>
-		</section>
+			<div class="row">
+				<section id="home">
+					<div class="sidebar-categories" wicket:id="sidebarColumn">
+						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+					</div>
+					<!--/span-->
 		
+						<div wicket:id="contentColumn" class="content-column">
+							<div wicket:id="afterHeader" class="afterHeader">
+								<!-- 		Carousel Images is loading.. -->
+							</div>
+							<div wicket:id="addedInfo"></div>
+							<div wicket:id="feedback" class="feedback"></div>
+							<wicket:child>
+								<ol class="featured-products">
+									<div id="featuredProducts">
+										<li><a href="#">Product name</a></li>
+									</div>
+								</ol>
+							</wicket:child>
+						</div>
+				</section>
+			</div>
 		</div>
 		<div class="clearfix"></div>
 		
