--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_chrome.html
@@ -25,36 +25,38 @@
 </head>
 
 <body>
+<div class="">
 	<div wicket:id="dev">[DebugBar]</div>
 	
-	<div class="container-fluid">
 	
 		<header wicket:id="header"></header>
 		<div wicket:id="navbar">Navbar... (see Navbar.html)</div>
 		
 		
 		<div class="container">
-		<section id="home">
-			<div class="sidebar-categories" wicket:id="sidebarColumn">
-				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-			</div>
-			<!--/span-->
-
-			<div wicket:id="contentColumn" class="content-column">
-				<div wicket:id="afterHeader" class="afterHeader">
-					<!-- 		Carousel Images is loading.. -->
-				</div>
-				<div wicket:id="addedInfo"></div>
-				<div wicket:id="feedback" class="feedback"></div>
-				<wicket:child>
-					<ol class="featured-products">
-						<div id="featuredProducts">
-							<li><a href="#">Product name</a></li>
+			<div class="row">
+				<section id="home">
+					<div class="sidebar-categories col-sm-4 col-md-3" wicket:id="sidebarColumn">
+						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+					</div>
+					<!--/span-->
+		
+					<div wicket:id="contentColumn">
+						<div wicket:id="afterHeader" class="afterHeader">
+							<!-- 		Carousel Images is loading.. -->
 						</div>
-					</ol>
-				</wicket:child>
+						<div wicket:id="addedInfo"></div>
+						<div wicket:id="feedback" class="feedback"></div>
+						<wicket:child>
+							<ol class="featured-products">
+								<div id="featuredProducts">
+									<li><a href="#">Product name</a></li>
+								</div>
+							</ol>
+						</wicket:child>
+					</div>
+				</section>
 			</div>
-		</section>
 		
 		</div>
 		<div class="clearfix"></div>
@@ -66,8 +68,6 @@
 			</small>
 		</footer>
 		</div>
-	</div>
-	<!--/.fluid-container-->
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
 
@@ -83,6 +83,6 @@
 	</script>
 
 	<wicket:container wicket:id="footer-container" />
-	
+	</div>
 </body>
 </html>
