--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
@@ -1,22 +1,23 @@
 <wicket:panel>
-	<div class="row">
-		<div class="col-sm-12">
-	    	<section class="panel">
-	        	<header class="panel-heading">
-	          			<span wicket:id="kindDisplayName">Colors</span>
-				</header>
-				<div class="panel-body">
-					<div class="alert alert-info">
-						Only custom terms (with namespace other than <tt>base</tt>) are editable.
-					</div>
-					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> New</a>
-					<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
-						[table]
-					</table>
+	<form wicket:id="form">
+		<section class="panel">
+			<header class="panel-heading">
+       		<span>Term</span>
+			</header>
+			<div class="panel-body">
+				<div class="alert alert-info">
+					Hanya katalog custom (awalan bukan base) yang dapat diubah.
 				</div>
-			</section>
-		</div>
-	</div>
+				<select wicket:id="ddcTermKind"></select>
+				<div style="margin-top: 10px;">
+					<a wicket:id="addLink" href="#" class="btn btn-primary"><i class="fa fa-plus"></i> Tambah Term</a>
+				</div>
+				<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
+					[table]
+				</table>
+			</div>
+		</section>
+	</form>
 </wicket:panel>
 
 
