--- a/site/src/main/java/org/soluvas/web/site/widget/DisplayAttributeListPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/DisplayAttributeListPanel.html
@@ -1,7 +1,9 @@
 <wicket:panel>
 <div wicket:id="attrValues">
 	<b><span wicket:id="attrDisplayName">Color</span>:</b>
-	<span wicket:id="value">Red</span>
+	<div wicket:id="valueList">
+		<span wicket:id="value">Red</span>
+	</div>
 	<br/>
 </div>
 </wicket:panel>
