styling gita pelangi

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_queen.html
@@ -59,7 +59,7 @@ body {
 		<div class="container">
 			<div class="row">
 				<div class="content-wrapp">
-<!-- 					<div wicket:id="contentColumn" class="content-column col-sm-12 col-md-12"> -->
+<!-- 					<div wicket:id="contentColumn" class="content-column product-section col-xs-12 col-sm-8 col-md-9 col-lg-9n"> -->
 					<div wicket:id="contentColumn" class="content-column">
 						<div wicket:id="addedInfo"></div>
 						<div wicket:id="feedback" class="feedback"></div>
@@ -72,7 +72,7 @@ body {
 					
 						</wicket:child>
 					</div>
-					<div class="sidebar col-xs-12 col-sm-6 col-md-3 col-lg-3 text-center" wicket:id="sidebarColumn">
+					<div class="sidebar text-center" wicket:id="sidebarColumn">
 						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 					</div>
 				</div>
