--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -30,7 +30,8 @@ body {
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+ 
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -45,6 +46,7 @@ body {
 <!-- 	<link rel="apple-touch-icon-precomposed" sizes="72x72" -->
 <!-- 		href="/static/images/ico/apple-touch-icon-72-precomposed.png" /> -->
 <!-- 	<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png" /> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.2.6/smooth-scrollbar.js"></script>
 
 </head>
 
